# egis-agent-plugins

./: .gitignore  pyproject.toml
docs/: rag_document_read_strategy.md  rag_parameters.md
src/egis_agent_plugins/: __init__.py
src/egis_agent_plugins/core/bootstrap/: __init__.py
src/egis_agent_plugins/core/bootstrap/agent/: __init__.py  agent_builder.py  skill_builder.py
src/egis_agent_plugins/core/bootstrap/app/: __init__.py  app_builder.py  env_builder.py  log_builder.py
src/egis_agent_plugins/core/flows/: __init__.py
src/egis_agent_plugins/core/flows/docgen/: __init__.py  entry.py  tools.py
src/egis_agent_plugins/core/flows/rag/: __init__.py  clients.py  events.py  filters.py  guards.py  schema.py  state.py  tool.py  workflow.py
src/egis_agent_plugins/core/internal/: __init__.py  rag_config.py
src/egis_agent_plugins/core/internal/a2ui/: __init__.py  config.py  emitter.py  types.py
src/egis_agent_plugins/core/internal/emit/: __init__.py  frontend.py  llm.py  trace.py
src/egis_agent_plugins/core/plugins/: __init__.py  download.py  studio.py
src/egis_agent_plugins/core/router/: __init__.py  download.py
src/egis_agent_plugins/core/service/: __init__.py
src/egis_agent_plugins/core/service/base/: __init__.py  milvus_client.py  postgres_client.py
src/egis_agent_plugins/core/service/download/: __init__.py  path_guard.py  (+2 more)
src/egis_agent_plugins/core/tools/: __init__.py
src/egis_agent_plugins/core/utils/: __init__.py  env.py
tests/unit/: test_rag_research_pipeline.py  test_rag_workflow.py  test_react_state_machine.py  test_rerank_observability.py
(+124 files in other folders)
