[project]
name = "egis-agent-plugins"
version = "0.1.0"
description = "egis-agents plugins library — 对 ark-agentic 0.7.6 的封装与扩展（启动/路由/RAG/PPT/skill）"
requires-python = ">=3.10"
dependencies = [
    "ark-agentic[server]>=0.7.6",
    "fastapi>=0.128.0",
    "itsdangerous>=2.1.0",
    # RAG：知识库检索
    "pymilvus>=2.4",
    "asyncpg>=0.30.0",
    # PPT / Word 文档生成
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "cairosvg>=2.9.0",
    "pymupdf>=1.27.2",
    "mammoth>=1.12.0",
    "markdownify>=1.2.2",
    "Pillow>=10.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

# ── 本地开发 vs 生产 ───────────────────────────────────
# 本地开发：uv sync 通过 path source 安装 editable 版本
# 生产部署：uv build 打包 whl，pip install 从 PyPI / 私有 registry 安装
[tool.uv.sources]
ark-agentic = { path = "../ark-agentic", editable = true }  # editable 绕过 ark 的 force-include 构建 bug

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egis_agent_plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
